--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -11,50 +11,58 @@
   <link rel="manifest" href="manifest.webmanifest">
 </head>
 
-<body>
-  <header>
-    <a>
-      <img src="img/logo.svg" alt="Логотип студии Nerds" width="160" height="65">
-    </a>
-    <ul>
-      <li>
-        <a href="blank.html">Студия</a>
-      </li>
-      <li>
-        <a href="blank.html">Клиенты</a>
-      </li>
-      <li>
-        <a href="catalog.html">Магазин</a>
-      </li>
-      <li>
-        <a href="blank.html">Контакты</a>
-      </li>
-    </ul>
-    <a href="#">Корзина</a>
-    <h1>Магазин готовых шаблонов</h1>
+<body class="page-body inner-page">
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo">
+        <img src="img/logo.svg" alt="Логотип студии Nerds" width="160" height="65">
+      </a>
+      <ul class="site-navigation">
+        <li>
+          <a href="blank.html">Студия</a>
+        </li>
+        <li>
+          <a href="blank.html">Клиенты</a>
+        </li>
+        <li>
+          <a href="catalog.html">Магазин</a>
+        </li>
+        <li>
+          <a href="blank.html">Контакты</a>
+        </li>
+      </ul>
+      <div class="user-navigation">
+        <a class="cart-link" href="#">Корзина</a>
+      </div>
+    </nav>
+
   </header>
 
-  <main>
-    <section>
+  <main class="container">
+
+    <h1 class="page-title">Магазин готовых шаблонов</h1>
+
+    <section class="filters">
       <h2>Фильтр товаров</h2>
-      <form method="GET" action="https://echo.htmlacademy.ru">
+      <form class="filter" method="GET" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend>Стоимость:</legend>
-
         </fieldset>
         <fieldset>
           <legend>Сетка:</legend>
           <ul>
-            <li>
-              <input type="radio" name="grid-group" value="adaptive" id="filter-adaptive" checked>
+            <li class="filter-option filter-radio">
+              <input class="filter-input-radio filter-input" type="radio" name="grid-group" value="adaptive"
+                id="filter-adaptive" checked>
               <label for="filter-adaptive">Адаптивная</label>
             </li>
-            <li>
-              <input type="radio" name="grid-group" value="fix" id="filter-fix">
+            <li class="filter-option filter-radio">
+              <input class="filter-input-radio filter-input" type="radio" name="grid-group" value="fix" id="filter-fix">
               <label for="filter-fix">Фиксированная</label>
             </li>
-            <li>
-              <input type="radio" name="grid-group" value="fluid" id="filter-fluid">
+            <li class="filter-option filter-radio">
+              <input class="filter-input-radio filter-input" type="radio" name="grid-group" value="fluid"
+                id="filter-fluid">
               <label for="filter-fluid">Резиновая</label>
             </li>
           </ul>
@@ -62,29 +70,30 @@
         <fieldset>
           <legend>Особенности:</legend>
           <ul>
-            <li>
-              <input type="checkbox" name="slider" id="filter-slider" checked>
+            <li class="filter-option filter-checkbox">
+              <input class="filter-input-checkbox filter-input" type="checkbox" name="slider" id="filter-slider"
+                checked>
               <label for="filter-slider">Слайдер</label>
             </li>
-            <li>
-              <input type="checkbox" name="features" id="filter-features">
+            <li class="filter-option filter-checkbox">
+              <input class="filter-input-checkbox filter-input" type="checkbox" name="features" id="filter-features">
               <label for="filter-features">Блок преимуществ</label>
             </li>
-            <li>
-              <input type="checkbox" name="news" id="filter-news" checked>
+            <li class="filter-option filter-checkbox">
+              <input class="filter-input-checkbox filter-input" type="checkbox" name="news" id="filter-news" checked>
               <label for="filter-news">Новости</label>
             </li>
-            <li>
-              <input type="checkbox" name="gallery" id="filter-gallery">
+            <li class="filter-option filter-checkbox">
+              <input class="filter-input-checkbox filter-input" type="checkbox" name="gallery" id="filter-gallery">
               <label for="filter-gallery">Галерея</label>
             </li>
-            <li>
-              <input type="checkbox" name="bin" id="filter-bin">
+            <li class="filter-option filter-checkbox">
+              <input class="filter-input-checkbox filter-input" type="checkbox" name="bin" id="filter-bin">
               <label for="filter-bin">Корзина</label>
             </li>
           </ul>
         </fieldset>
-        <button type="submit">Показать</button>
+        <button class="filter-button button" type="submit">Показать</button>
       </form>
     </section>
 
@@ -92,92 +101,92 @@
       <h2>Сортировать</h2>
       <ul>
         <li>
-          <button type="button">По цене</button>
+          <button class="filter-button" type="button">По цене</button>
         </li>
         <li>
-          <button type="button">По типу</button>
+          <button class="filter-button" type="button">По типу</button>
         </li>
         <li>
-          <button type="button">По названию</button>
+          <button class="filter-button" type="button">По названию</button>
         </li>
         <li>
-          <button type="button">На уменьшение</button>
+          <button class="filter-button" type="button">На уменьшение</button>
         </li>
         <li>
-          <button type="button">На увеличение</button>
+          <button class="filter-button" type="button">На увеличение</button>
         </li>
       </ul>
     </section>
 
-    <section>
+    <section class="catalog">
       <h2>Список продуктов</h2>
-      <ul>
-        <li>
-          <div></div>
+      <ul class="catalog-list">
+        <li class="catalog-item">
+          <div class="item-top"></div>
           <img src="img/product-1.jpg" width="358" height="578" alt="">
-          <div>
+          <div class="item-info">
             <h3>Sedona</h3>
             <p>Информационный сайт для туристов</p>
-            <button type="button">9 900 ₽</button>
+            <button class="button" type="button">9 900 ₽</button>
           </div>
         </li>
-        <li>
-          <div></div>
+        <li class="catalog-item">
+          <div class="item-top"></div>
           <img src="img/product-2.jpg" width="358" height="578" alt="">
-          <div>
+          <div class="item-info">
             <h3>Pink</h3>
             <p>Информационный сайт для туристов</p>
             <button type="button">9 900 ₽</button>
           </div>
         </li>
-        <li>
-          <div></div>
+        <li class="catalog-item">
+          <div class="item-top"></div>
           <img src="img/product-3.jpg" width="358" height="578" alt="">
-          <div>
+          <div class="item-info">
             <h3>Borodinski</h3>
             <p>Информационный сайт для туристов</p>
             <button type="button">9 900 ₽</button>
           </div>
         </li>
-        <li>
-          <div></div>
+        <li class="catalog-item">
+          <div class="item-top"></div>
           <img src="img/product-4.jpg" width="358" height="578" alt="">
-          <div>
+          <div class="item-info">
             <h3>Mishka</h3>
             <p>Информационный сайт для туристов</p>
             <button type="button">9 900 ₽</button>
           </div>
         </li>
-        <li>
-          <div></div>
+        <li class="catalog-item">
+          <div class="item-top"></div>
           <img src="img/product-5.jpg" width="358" height="578" alt="">
-          <div>
+          <div class="item-info">
             <h3>A+</h3>
             <p>Информационный сайт для туристов</p>
             <button type="button">9 900 ₽</button>
           </div>
         </li>
-        <li>
-          <div></div>
+        <li class="catalog-item">
+          <div class="item-top"></div>
           <img src="img/product-6.jpg" width="358" height="578" alt="">
-          <div>
+          <div class="item-info">
             <h3>Кваст</h3>
             <p>Информационный сайт для туристов</p>
             <button type="button">9 900 ₽</button>
           </div>
         </li>
       </ul>
-      <ul>
-        <li>
+      <ul class="pagintaion-list">
+        <li class="pagination-item">
           <a>1</a>
         </li>
-        <li>
+        <li class="pagination-item">
           <a href="#">2</a>
         </li>
-        <li>
+        <li class="pagination-item">
           <a href="#">3</a>
         </li>
-        <li>
+        <li class="pagination-item">
           <a href="#">Следующая</a>
         </li>
       </ul>
@@ -185,23 +194,43 @@
 
   </main>
 
-  <footer>
-    <section>
-      <h2>Давайте дружить!</h2>
-      <ul>
-        <li>
-          <a href="#">Вконтакте</a>
-        </li>
-        <li>
-          <a href="#">Facebook</a>
-        </li>
-        <li>
-          <a href="#">Instagram</a>
-        </li>
-      </ul>
-      <p>Давайте дружить, это выгодно!</p>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
-    </section>
+  <footer class="main-footer">
+    <div class="container">
+      <section class="footer-social">
+        <ul>
+          <li>
+            <a class="social-button" href="#">
+              <span>Вконтакте</span>
+              <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M16.138 11.51C17.094 11.201 18.318 13.55 19.621 14.449C20.599 15.13 21.348 14.983 21.348 14.983L24.821 14.933C24.821 14.933 26.636 14.821 25.778 13.379C25.707 13.259 25.275 12.31 23.193 10.357C21.016 8.31404 21.311 8.64504 23.932 5.11304C25.529 2.96004 26.168 1.64504 25.968 1.08504C25.776 0.546037 24.603 0.686037 24.603 0.686037L20.69 0.713037C20.309 0.714037 19.986 0.832037 19.839 1.22804C19.836 1.23204 19.218 2.89404 18.394 4.30704C16.653 7.29604 15.958 7.45504 15.67 7.26804C15.009 6.83504 15.176 5.53104 15.176 4.60404C15.176 1.70704 15.608 0.499037 14.33 0.187037C13.903 0.0830374 13.591 0.0150374 12.502 0.00503741C11.11 -0.0159626 9.92797 0.00503743 9.25797 0.334037C8.81297 0.557037 8.47197 1.04604 8.67897 1.07404C8.93897 1.10904 9.52197 1.23404 9.83397 1.66004C10.235 2.21204 10.223 3.44904 10.223 3.44904C10.223 3.44904 10.452 6.86004 9.68297 7.28304C9.15497 7.57304 8.43297 6.98104 6.87997 4.26704C6.08697 2.87904 5.48797 1.34504 5.48797 1.34504C5.48797 1.34504 5.37197 1.06004 5.16197 0.904037C4.91197 0.719037 4.56197 0.660037 4.56197 0.660037L0.84797 0.684037C0.84797 0.684037 0.28997 0.700037 0.0849697 0.946037C-0.0970303 1.16404 0.0699697 1.61404 0.0699697 1.61404C0.0699697 1.61404 2.97897 8.49504 6.27297 11.961C9.29297 15.143 12.725 14.932 12.725 14.932H14.28C14.28 14.932 14.749 14.878 14.989 14.62C15.213 14.38 15.203 13.929 15.203 13.929C15.203 13.929 15.172 11.82 16.138 11.51Z"
+                  fill="white" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="social-button" href="#">
+              <span>Facebook</span>
+              <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V0H8C5.79086 0 4 1.79086 4 4V8H0V12H4V22H8V12H12V8H8V4H12Z" fill="white" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="social-button" href="#">
+              <span>Instagram</span>
+              <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M3 0H18C19.65 0 21 1.35 21 3V18C21 19.65 19.65 21 18 21H3C1.35 21 0 19.65 0 18V3C0 1.35 1.35 0 3 0ZM14 10.5C14 8.57 12.43 7 10.5 7C8.57 7 7 8.57 7 10.5C7 12.43 8.57 14 10.5 14C12.43 14 14 12.43 14 10.5ZM3 18V9H4.181C4.0626 9.49127 4.00186 9.99467 4 10.5C4 14.0899 6.91015 17 10.5 17C14.0899 17 17 14.0899 17 10.5C16.9986 9.99464 16.9379 9.49118 16.819 9H18V18H3ZM14 7H18V3H14V7Z"
+                  fill="white" />
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <h2>Давайте дружить, это выгодно!</h2>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </section>
+    </div>
   </footer>
 
   <section>
