Adds basic styling

--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Магазин Nerds</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicon/180.png">
@@ -24,8 +29,8 @@
         <li>
           <a href="blank.html">Клиенты</a>
         </li>
-        <li>
-          <a href="catalog.html">Магазин</a>
+        <li class="site-navigation-current">
+          <a>Магазин</a>
         </li>
         <li>
           <a href="blank.html">Контакты</a>
@@ -62,7 +67,7 @@
             </li>
             <li class="filter-option filter-radio">
               <input class="filter-input-radio filter-input" type="radio" name="grid-group" value="fluid"
-                id="filter-fluid">
+                id="filter-fluid" disabled>
               <label for="filter-fluid">Резиновая</label>
             </li>
           </ul>
@@ -88,7 +93,7 @@
               <label for="filter-gallery">Галерея</label>
             </li>
             <li class="filter-option filter-checkbox">
-              <input class="filter-input-checkbox filter-input" type="checkbox" name="bin" id="filter-bin">
+              <input class="filter-input-checkbox filter-input" type="checkbox" name="bin" id="filter-bin" disabled>
               <label for="filter-bin">Корзина</label>
             </li>
           </ul>
@@ -113,7 +118,7 @@
           <button class="filter-button" type="button">На уменьшение</button>
         </li>
         <li>
-          <button class="filter-button" type="button">На увеличение</button>
+          <button class="filter-button" type="button filter-button">На увеличение</button>
         </li>
       </ul>
     </section>
@@ -136,7 +141,7 @@
           <div class="item-info">
             <h3>Pink</h3>
             <p>Информационный сайт для туристов</p>
-            <button type="button">9 900 ₽</button>
+            <button class="button" type="button">9 900 ₽</button>
           </div>
         </li>
         <li class="catalog-item">
@@ -145,7 +150,7 @@
           <div class="item-info">
             <h3>Borodinski</h3>
             <p>Информационный сайт для туристов</p>
-            <button type="button">9 900 ₽</button>
+            <button class="button" type="button">9 900 ₽</button>
           </div>
         </li>
         <li class="catalog-item">
@@ -154,16 +159,16 @@
           <div class="item-info">
             <h3>Mishka</h3>
             <p>Информационный сайт для туристов</p>
-            <button type="button">9 900 ₽</button>
+            <button class="button" type="button">9 900 ₽</button>
           </div>
         </li>
         <li class="catalog-item">
           <div class="item-top"></div>
           <img src="img/product-5.jpg" width="358" height="578" alt="">
           <div class="item-info">
-            <h3>A+</h3>
-            <p>Информационный сайт для туристов</p>
-            <button type="button">9 900 ₽</button>
+            <h3 class="item-info-title">A+</h3>
+            <p class="item-info-text">Информационный сайт для туристов</p>
+            <button class="button" type="button">9 900 ₽</button>
           </div>
         </li>
         <li class="catalog-item">
@@ -172,12 +177,12 @@
           <div class="item-info">
             <h3>Кваст</h3>
             <p>Информационный сайт для туристов</p>
-            <button type="button">9 900 ₽</button>
+            <button class="button" type="button">9 900 ₽</button>
           </div>
         </li>
       </ul>
       <ul class="pagintaion-list">
-        <li class="pagination-item">
+        <li class="pagination-item pagintaion-item-current">
           <a>1</a>
         </li>
         <li class="pagination-item">
@@ -246,7 +251,7 @@
       </p>
       <label for="email-text">Текст письма:</label><br>
       <textarea name="text" id="email-text" cols="30" rows="10">В свободной форме</textarea>
-      <button type="submit">Отправить</button>
+      <button class="button" type="submit">Отправить</button>
     </form>
     <button type="button">Закрыть</button>
   </section>
