--- a/catalog.html
+++ b/catalog.html
@@ -18,37 +18,38 @@
 
 <body class="page-body inner-page">
   <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="img/logo.svg" alt="Логотип студии Nerds" width="160" height="65">
-      </a>
-      <ul class="site-navigation">
-        <li>
-          <a href="blank.html">Студия</a>
-        </li>
-        <li>
-          <a href="blank.html">Клиенты</a>
-        </li>
-        <li class="site-navigation-current">
-          <a>Магазин</a>
-        </li>
-        <li>
-          <a href="blank.html">Контакты</a>
-        </li>
-      </ul>
-      <div class="user-navigation">
-        <a class="cart-link" href="#">Корзина</a>
-      </div>
-    </nav>
-
+    <div class="container">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/logo.svg" alt="Логотип студии Nerds" width="160" height="65">
+        </a>
+        <ul class="site-navigation">
+          <li>
+            <a href="blank.html">Студия</a>
+          </li>
+          <li>
+            <a href="blank.html">Клиенты</a>
+          </li>
+          <li class="site-navigation-current">
+            <a>Магазин</a>
+          </li>
+          <li>
+            <a href="blank.html">Контакты</a>
+          </li>
+        </ul>
+        <div class="user-navigation">
+          <a class="cart-link" href="#">Корзина</a>
+        </div>
+      </nav>
+    </div>
   </header>
 
-  <main class="container">
+  <main class="page-catalog container">
 
     <h1 class="page-title">Магазин готовых шаблонов</h1>
 
     <section class="filters">
-      <h2>Фильтр товаров</h2>
+      <!-- <h2>Фильтр товаров</h2> -->
       <form class="filter" method="GET" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend>Стоимость:</legend>
@@ -102,29 +103,31 @@
       </form>
     </section>
 
-    <section>
-      <h2>Сортировать</h2>
-      <ul>
-        <li>
-          <button class="filter-button" type="button">По цене</button>
-        </li>
-        <li>
-          <button class="filter-button" type="button">По типу</button>
-        </li>
-        <li>
-          <button class="filter-button" type="button">По названию</button>
-        </li>
-        <li>
-          <button class="filter-button" type="button">На уменьшение</button>
-        </li>
-        <li>
-          <button class="filter-button" type="button filter-button">На увеличение</button>
-        </li>
-      </ul>
-    </section>
+
 
     <section class="catalog">
-      <h2>Список продуктов</h2>
+      <!-- <h2>Список продуктов</h2> -->
+      <section class="catalog-sort">
+        <h2>Сортировать</h2>
+        <ul>
+          <li>
+            <button class="filter-button" type="button">По цене</button>
+          </li>
+          <li>
+            <button class="filter-button" type="button">По типу</button>
+          </li>
+          <li>
+            <button class="filter-button" type="button">По названию</button>
+          </li>
+          <li>
+            <button class="filter-button" type="button">На уменьшение</button>
+          </li>
+          <li>
+            <button class="filter-button" type="button filter-button">На увеличение</button>
+          </li>
+        </ul>
+      </section>
+
       <ul class="catalog-list">
         <li class="catalog-item">
           <div class="item-top"></div>
@@ -200,6 +203,19 @@
   </main>
 
   <footer class="main-footer">
+    <section class="contacts">
+      <div class="container">
+        <div>
+          <h2>Nerds design studio</h2>
+          <p>
+            191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8<br>
+          </p>
+          <p>тел. +7 (812) 275-75-75</p>
+          <button class="button" type="button">Напишите нам</button>
+        </div>
+      </div>
+    </section>
     <div class="container">
       <section class="footer-social">
         <ul>
@@ -232,8 +248,10 @@
             </a>
           </li>
         </ul>
-        <h2>Давайте дружить, это выгодно!</h2>
-        <p>Скидка 10% для друзей из социальных сетей.</p>
+        <div>
+          <h2>Давайте дружить, это выгодно!</h2>
+          <p>Скидка 10% для друзей из социальных сетей.</p>
+        </div>
       </section>
     </div>
   </footer>
