--- a/index.html
+++ b/index.html
@@ -166,20 +166,23 @@
       </ul>
     </section>
 
-    <section class="contacts">
-      <div>
-        <h2>Nerds design studio</h2>
-        <p>
-          191186, Санкт-Петербург,<br>
-          ул. Б. Конюшенная, д. 19/8<br>
-        </p>
-        <p>тел. +7 (812) 275-75-75</p>
-        <button class="button" type="button">Напишите нам</button>
-      </div>
-    </section>
+
   </main>
 
   <footer class="main-footer">
+    <section class="contacts">
+      <div class="container">
+        <div>
+          <h2>Nerds design studio</h2>
+          <p>
+            191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8<br>
+          </p>
+          <p>тел. +7 (812) 275-75-75</p>
+          <button class="button" type="button">Напишите нам</button>
+        </div>
+      </div>
+    </section>
     <div class="container">
       <section class="footer-social">
         <ul>
@@ -217,7 +220,6 @@
           <p>Скидка 10% для друзей из социальных сетей.</p>
         </div>
       </section>
-
     </div>
   </footer>
 
