--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Сетка на флексах для главной страницы -->
 <!DOCTYPE html>
 <html class="page" lang="ru">
 
@@ -65,19 +66,19 @@
     <section class="services">
       <h2 class="visually-hidden">Услуги</h2>
       <ul class="services-list">
-        <li class="services-item">
+        <li class="services-item slide">
           <img src="img/png/illustration-1.png" width="300" height="146" alt="">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним<br>после того как увидит ваш сайт!</p>
           <a class="button" href="blank.html">Заказать</a>
         </li>
-        <li class="services-item">
+        <li class="services-item slide">
           <img src="img/png/illustration-2.png" width="300" height="146" alt="">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений<br>в AppStore и Google Play</p>
           <a class="button button-green" href="blank.html">Заказать</a>
         </li>
-        <li class="services-item">
+        <li class="services-item slide">
           <img src="img/png/illustration-3.png" width="300" height="146" alt="">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете,<br>насколько вы изумительны!</p>
